@@ -3,6 +3,8 @@ plugins {
     id 'application'
     id 'maven-publish'
     id 'distribution'
+    id "org.jetbrains.intellij" version "0.4.10"    /* https://github.com/JetBrains/gradle-intellij-plugin */
+    id "org.jetbrains.grammarkit" version "2019.3"  /* https://github.com/JetBrains/gradle-grammar-kit-plugin */
 }
 
 repositories {
@@ -16,16 +18,25 @@ repositories {
     }
 }
 
+ext {
+    javaparser_version = "3.15.2"
+    javapoet_version = "1.11.1"
+    idea_version='2019.2.3'
+}
+
 dependencies {
-    compile 'com.github.javaparser:javaparser-core-serialization:3.14.11'
-    compile 'com.github.javaparser:javaparser-core:3.14.11'
-    compile 'com.github.javaparser:javaparser-symbol-solver-core:3.14.11'
+
+    implementation "com.github.javaparser:javaparser-core-serialization:${javaparser_version}"
+    implementation "com.github.javaparser:javaparser-core:${javaparser_version}"
+    implementation "com.github.javaparser:javaparser-symbol-solver-core:${javaparser_version}"
+    implementation "com.squareup:javapoet:${javapoet_version}"
+
 }
 
 group = 'rok'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = JavaVersion.VERSION_12
-targetCompatibility = JavaVersion.VERSION_12
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 ext.moduleName = 'rok'
 
 publishing {
@@ -37,16 +48,16 @@ publishing {
 }
 
 tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+    options.encoding = "UTF-8"
 }
 
 
 compileJava {
-    inputs.property("moduleName", moduleName)
     doFirst {
         options.compilerArgs = [
                 '--enable-preview',
                 '--module-path', classpath.asPath,
+                '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                 '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                 '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
                 '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
@@ -54,4 +65,14 @@ compileJava {
         ]
         classpath = files()
     }
+}
+
+
+intellij {
+
+    pluginName = 'rok'
+    type = 'IC'
+    version = "IC-${idea_version}"
+    sandboxDirectory = "/Volumes/To/dev/idea-sandbox/idea-rok-${idea_version}"
+
 }
